feat: add custom item support
Added support for the following custom item plugins:
- Oraxen
- ItemsAdder
- Nexo
- MMOItems
- MythicMobs
- CraftEngine